# tensorconvert

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE.txt  README.md  pyproject.toml  setup.cfg
.github/workflows/: python-package.yml
docs/: api.rst  conf.py  index.md  requirements.txt
docs/notebooks/: fourth-order.ipynb  second-order.ipynb
examples/: example.ipynb  rotations.ipynb
src/tensorconvert/: __about__.py  __init__.py  fourthorder.py  secondorder.py
src/tensorconvertor/: __about__.py  __init__.py  fourthorder.py  secondorder.py
tests/: test_fourthorder.py  test_secondorder.py
