[metadata]
name = tensorconvertor
version = 0.0.1
author = Tianyi Li
author_email = tianyikillua@gmail.com
description = Convertor between tensor representations
url = https://github.com/tianyikillua/tensorconvert
project_urls =
    Code=https://github.com/tianyikillua/tensorconvert
    Issues=https://github.com/tianyikillua/tensorconvert/issues
long_description = file: README.md
long_description_content_type = text/markdown
# See <https://pypi.org/classifiers/> for all classifiers.
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir =
    =src
packages = find:
install_requires =
    importlib_metadata;python_version<"3.8"
    sympy

python_requires = >=3.8

[options.packages.find]
where=src
